--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "npm-cleanup",
   "version": "0.1.1",
   "description": "Cleans node_modules of artifacts that do not belong.",
-  "main": "index.js",
+  "main": "npm-cleanup.js",
   "bin": {
     "npm-cleanup": "./bin.js"
   },
@@ -13,6 +13,8 @@
     "npm-cleanup.js"
   ],
   "scripts": {
+    "start": "node bin",
+    "restart": "npm run build && npm start",
     "clean": "rimraf bin.js && rimraf npm-cleanup.js",
     "prebuild": "npm run clean",
     "build": "babel src -d ./",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "chalk": "^1.1.1"
   }
 }
